<resources>
    <string name="app_name">Dice</string>

    <!-- DICE -->
    <string name="dice_see_history_button"><u>Vezi tot istoricul</u></string>
    <string name="dice_roll_button">Învârte zarurile</string>
    <string name="dice_shake_hint">… sau dă shake</string>
    <string name="dice_previous_roll">Zarul anterior</string>

    <!-- HISTORY -->
    <string name="history_title">Istoric</string>

    <!-- DIALOG DOUBLE -->
    <string name="dialog_double_title">Ai dat dublă!</string>
    <string name="dice_no_score">-</string>


    <string name="no_history_message">Nu ai istoric încă</string>
    <string name="dice_img">dice img</string>
    <string name="txt_double">Dublă</string>
    <string name="txt_no_dice">0–0</string>
    <string name="txt_no_sum">0</string>
    <string name="dialog_double_info">Foarte tare! Bravo, mai încearcă până mai dai o dată!</string>
    <string name="txt_continue">Super tare, mersi</string>

</resources>