<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/darkGray"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    android:layout_gravity="center"
    app:strokeColor="@color/belge"
    app:strokeWidth="2dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_double"
            style="@style/AppTheme.Widget.TextView.HistoryDiceDouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/dialog_double_title"
            android:textSize="24sp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/txt_info"
            style="@style/AppTheme.Widget.TextView.Regular"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="31dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_double_info"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/AppTheme.Widget.MaterialComponents.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_continue"
            android:layout_gravity="center"
            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>